# project-template

./: CMakeLists.txt  bbuild.sh  readme.md
app/: main.cpp
docker/: builder-launch.sh  builder.Dockerfile
documentation/: Doxyfile.in
lib/: CMakeLists.txt  gm_lib.cpp  gm_lib.hpp
scripts/: plot.py
test/: CMakeLists.txt
